11.5 Escrevendo o teste de integração para retornar todas as allocations
